# X-Ray-Sim

./: CMakeLists.txt  G4Data0.heprep  G4Data1.heprep  Lab.cc  README.txt
Lab_build/: CMakeCache.txt  Lab  Makefile  cmake_install.cmake
include/: LabDetectorConstruction.hh  LabDetectorHit.hh  LabDetectorMessenger.hh  LabDetectorSD.hh  LabEventAction.hh  LabPhysicsList.hh  LabPrimaryGeneratorAction.hh  LabRunAction.hh  global.h
macro/: Mip.mac  Mip.mac~  README.mac  sim.g4mac  test.g4mac  vis.mac  xray.mac  xray_down.mac  xray_gps.mac  xray_scanGPS.mac
output/: 60keV40Deg.root  vis.root
src/: LabDetectorConstruction.cc  LabDetectorHit.cc  LabDetectorMessenger.cc  LabDetectorSD.cc  LabEventAction.cc  LabPhysicsList.cc  LabPrimaryGeneratorAction.cc  LabRunAction.cc
